Text does not climb into error window
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox113 | --- | fixed |
People
(Reporter: roman.deev06, Assigned: cherubpeters, Mentored)
References
Details
(Keywords: good-first-bug, Whiteboard: [lang=obj-c])
Attachments
(3 files, 1 obsolete file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:82.0) Gecko/20100101 Firefox/82.0
Steps to reproduce:
After painting Firefox in the window that appears does not fit the text, and the window can not be expanded.
![]() |
||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Comment 1•5 years ago
|
||
This is a good first bug. The checkboxes are being created and setup here.
We should either wrap the text or widen the window so that it's not truncated.
Comment 2•5 years ago
|
||
Apply this patch before building Firefox to reproduce the issue in a local build.
Assignee | ||
Comment 3•2 years ago
|
||
Hello, I am an outreachy applicant and would love to work on this bug.
Comment 4•2 years ago
|
||
Hello Blessing and welcome, do you already have set up a Firefox build on your mac? If you do I'll assign you to the bug directly and help you fix it, if you don't then I'll first walk you through setting up a Firefox build.
Comment 5•2 years ago
|
||
Sir, I have my setup ready, can I work on this, if Peters's setup is not ready?
Assignee | ||
Comment 6•2 years ago
|
||
(In reply to Gabriele Svelto [:gsvelto] from comment #4)
Hello Blessing and welcome, do you already have set up a Firefox build on your mac? If you do I'll assign you to the bug directly and help you fix it, if you don't then I'll first walk you through setting up a Firefox build.
Thank you for the feedback, I have my Firefox build ready and I will really appreciate to the opportunity to work with you on this.
Comment 7•2 years ago
|
||
(In reply to Blessing Peters from comment #6)
Thank you for the feedback, I have my Firefox build ready and I will really appreciate to the opportunity to work with you on this.
I have assigned the bug to you. The first step is to reproduce the issue and study the code that causes it:
- Apply the patch in comment 2 to Firefox code
- Make sure that your mozconfig file contains this line, this is required for the crash reporter to be built:
ac_add_options --enable-crashreporter
- Build Firefox w/ the patch applied
- Launch Firefox with the following command, this will ensure that the crash reporter is used:
./mach run --enable-crash-reporter
- Browse to
about:crashparent
, this will crash the browser and display the crash reporter client. This should display the truncated string.
Comment 8•2 years ago
|
||
(In reply to Abhishek from comment #5)
Sir, I have my setup ready, can I work on this, if Peters's setup is not ready?
I'm assigning the bug to her because she requested it first, fortunately there are several other good first bugs to pick from.
Comment 9•2 years ago
|
||
One additional note: please join the #crashreporting channel on chat.mozilla.org, you'll find me there in case you need help.
Assignee | ||
Comment 10•2 years ago
|
||
(In reply to Gabriele Svelto [:gsvelto] from comment #7)
(In reply to Blessing Peters from comment #6)
Thank you for the feedback, I have my Firefox build ready and I will really appreciate to the opportunity to work with you on this.
I have assigned the bug to you. The first step is to reproduce the issue and study the code that causes it:
- Apply the patch in comment 2 to Firefox code
- Make sure that your mozconfig file contains this line, this is required for the crash reporter to be built:
ac_add_options --enable-crashreporter
- Build Firefox w/ the patch applied
- Launch Firefox with the following command, this will ensure that the crash reporter is used:
./mach run --enable-crash-reporter
- Browse to
about:crashparent
, this will crash the browser and display the crash reporter client. This should display the truncated string.
Will get right to it. thank you
Assignee | ||
Comment 11•2 years ago
|
||
(In reply to Gabriele Svelto [:gsvelto] from comment #9)
One additional note: please join the #crashreporting channel on chat.mozilla.org, you'll find me there in case you need help.
Okay then
Assignee | ||
Comment 12•2 years ago
|
||
Assignee | ||
Comment 13•2 years ago
|
||
Depends on D172823
Updated•2 years ago
|
Updated•2 years ago
|
Comment 14•2 years ago
|
||
Note: there was a much older bug reported for this (bug 528800).
@gabriele
Can you confirm if that would be fixed here and mark as a dupe?
Comment 15•2 years ago
|
||
Comment 16•2 years ago
|
||
(In reply to Francesco Lodolo [:flod] from comment #14)
Note: there was a much older bug reported for this (bug 528800).
@gabriele
Can you confirm if that would be fixed here and mark as a dupe?
Yes, it's a dupe, I'll close it.
Comment 18•2 years ago
|
||
bugherder |
Description
•