Bug 1670436 - Prevent localized strings from being truncated in the crash reporter client r=gsvelto

Differential Revision: https://phabricator.services.mozilla.com/D172823